[package]
name = "swf-fixed"
version = "0.1.3"
description = "SWF fixed-point numbers for Rust"
documentation = "https://github.com/open-flash/rust-swf-fixed"
homepage = "https://github.com/open-flash/rust-swf-fixed"
repository = "https://github.com/open-flash/rust-swf-fixed"
readme = "./README.md"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
serde = "^1.0.89"

[dev-dependencies]
serde_json = "^1.0.39"
